package Interfaces;

public interface Command {

  /**
   * Execute command purpose
   */
  void execute();
}
