package Interfaces;

public interface GUI {

  /**
   * Update function
   */
  void update();
}
